koha-tmpl/intranet-tmpl/prog/css/src/_tables.scss
:root {
    --dt-row-selected: 231, 255, 218;
    --dt-row-selected-text: 0, 0, 0;
    --dt-row-selected-link: 0, 97, 0;
}

table {
    border-collapse: collapse;
    caption-side: top;

    thead {
        border-bottom: 2px solid $table-border-color;
    }

    tfoot {
        border-top: 2px solid $table-border-color;
    }

    .btn-group {
        white-space: nowrap;

        .btn {
            display: inline-block;
            float: none;
        }
    }

    &.indexes {
        td {
            vertical-align: middle;
        }
    }

    > caption {
        span {
            &.actions {
                font-size: 66%;
                font-weight: normal;
                margin: 0 .5em 0 0;
            }
        }

        button {
            &.dt-button {
                background: transparent none;
                border: 0;
                color: #595959;
                font-size: 60%;
                margin: 0 .5em;

                &:hover:not( .disabled ):active:not( .disabled ) {
                    background: transparent none;
                    border: 0;
                    box-shadow: none;
                    color: #000;
                }

                &:hover:not( .disabled ) {
                    background: transparent none;
                    border: 0;
                    color: #000;
                }
            }
        }

        div.dt-button-collection {
            font-size: 70%;
        }
    }

    &.invis {
        border: 0;

        tr,
        td {
            border: 0;
        }
    }

    +table {
        margin-top: 1em;
    }

    &.dataTable {
        border-collapse: collapse;
        margin-bottom: .5em;
        margin-top: .5em;

        &.fixedHeader-floating {
            margin-top: 0;
        }

        tfoot {
            td,
            th {
                padding: .5em;
            }

            & > tr {
                & th[scope="row"] {
                    background-color: $table-odd-row;
                    text-align: right;
                }
            }
        }

        thead {
            th,
            td {
                border-bottom: 1px solid $table-border-color;
                border-left: 1px solid $table-border-color;
                padding: .5em;

                &:first-child {
                    border-left: 0;
                }

                &:last-child {
                    border-right: 0;
                }
            }

            & > tr {
                th {
                    padding: .5em;
                    text-align: center;

                    &.dt-type-date,
                    &.dt-type-numeric {
                        text-align: center;
                    }

                    &.dt-orderable-asc span.dt-column-order::before,
                    &.dt-ordering-asc span.dt-column-order::before {
                        content: "\f0d8";
                        font-family: "Font Awesome 6 Free";
                        font-size: 1rem;
                        line-height: .5rem;
                    }

                    &.dt-orderable-asc span.dt-column-order::before,
                    &.dt-orderable-asc span.dt-column-order::before,
                    &.dt-orderable-desc span.dt-column-order::after,
                    &.dt-orderable-desc span.dt-column-order::after {
                        color: #000;
                        opacity: .2;
                    }

                    &.dt-orderable-desc span.dt-column-order::after,
                    &.dt-ordering-desc span.dt-column-order::after {
                        content: "\f0d7";
                        font-family: "Font Awesome 6 Free";
                        font-size: 1rem;
                        line-height: .5rem;
                    }

                    &.dt-ordering-asc span.dt-column-order::before,
                    &.dt-ordering-asc span.dt-column-order::before,
                    &.dt-ordering-desc span.dt-column-order::after,
                    &.dt-ordering-desc span.dt-column-order::after {
                        color: $green-text-color;
                        opacity: 1;
                    }
                }
            }
        }

        tbody {
            td {
                padding: .5em;
            }
            tr.dtrg-group {
                td {
                    background: #e0e0e0;
                }
            }
        }
    }

    /* Row grouping */
    &.group {
        tr {
            &.odd td {
                background-color: #F3F3F3;
                border: 1px solid $table-border-color;
                border-right: 1px solid $table-border-color;
            }

            &.even td {
                background-color: #FFF;
                border-right: 1px solid $table-border-color;
            }
        }

        td.group {
            background-color: #D1CFD0;
            border-bottom: 2px solid #A19B9E;
            border-top: 2px solid #A19B9E;
        }
    }
}

td,
th {
    border-bottom: 1px solid $table-border-color;
    border-left: 1px solid $table-border-color;
    padding: .2em .9em;

    &:first-child {
        border-left: none;
    }

    &:last-child {
        border-right: none;
    }
}

td {
    background-color: #FFFFFF;
    vertical-align: top;

    &.actions {
        white-space: nowrap;
    }

    &.data {
        font-family: $font-monospace;
        text-align: right;
    }

    &.total {
        text-align: right;
    }

    input {
        &.approve {
            background-color: #FFC;
        }
    }

    /* Row grouping */
    &.group {
        background-color: #D1CFD0;
        border-bottom: 2px solid #A19B9E;
        border-top: 2px solid #A19B9E;
    }
}

th {
    background-color: $table-header-background;
    font-weight: bold;
    text-align: center;

    &[scope="row"] {
        text-align: right;
    }

    &.data {
        font-family: $font-monospace;
        text-align: right;
    }
}
/* ... */

